# aind-vr-foraging-primary-data-nwb-packaging

code/: run_capsule.py
environment/: pyproject.toml
