[project]
name = "aind-vr-foraging-primary-data-nwb-packaging"
version = "0.1.0"
description = "CodeOcean capsule that packages VR Foraging primary data into NWB"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aind-behavior-vr-foraging-packaging",
    "aind-data-schema>2.0",
    "ruff"
]

[tool.uv.sources]
aind-behavior-vr-foraging-packaging = { git = "https://github.com/AllenNeuralDynamics/Aind.Behavior.VrForaging.Packaging.git" }
